hphp/hack/test/typecheck/refinements/inter_tconst.php.like_types.exp
File "inter_tconst.php", line 10, characters 51-52:
You are trying to access the member Ta but this is not an object, it is a dynamic value (Typing[4062])
File "inter_tconst.php", line 10, characters 20-20:
Definition is here
File "inter_tconst.php", line 11, characters 14-16:
You are trying to access the member get but this is not an object, it is a dynamic value or an object of type A (Typing[4062])
File "inter_tconst.php", line 10, characters 20-20:
Definition is here
File "inter_tconst.php", line 16, characters 5-8:
Some type constraint(s) here are violated (Typing[4062])
File "inter_tconst.php", line 10, characters 15-15:
'T' is a constrained type parameter
File "inter_tconst.php", line 10, characters 51-52:
You are trying to access the member Ta but this is not an object, it is a dynamic value
File "inter_tconst.php", line 10, characters 15-15:
Definition is here
File "inter_tconst.php", line 16, characters 5-8:
Some type constraint(s) here are violated (Typing[4062])
File "inter_tconst.php", line 10, characters 15-15:
'T' is a constrained type parameter
File "inter_tconst.php", line 10, characters 51-52:
You are trying to access the member Ta but this is not an object, it is a dynamic value
File "inter_tconst.php", line 10, characters 20-20:
Definition is here
File "inter_tconst.php", line 16, characters 10-11:
Invalid argument (Typing[4090])
File "inter_tconst.php", line 15, characters 13-13:
No type constant 'Ta' in B
File "inter_tconst.php", line 8, characters 7-7:
Declaration of B is here
